# NBAStats-Predictor

./: .claudeignore  .env.example  .gitignore  .mcp.json  .mcp.json.example  .pre-commit-config.yaml  CLAUDE.md  PLAN.md  README.md  pyproject.toml
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/workflows/: biweekly_retrain.yml  daily_ingest.yml
.streamlit/: config.toml
scripts/: apply_schema.py
src/nba_predictor/: __init__.py  config.py
src/nba_predictor/app/: data.py  streamlit_app.py
src/nba_predictor/db/: connection.py  schema.sql
src/nba_predictor/features/: build.py  player_universe.py
src/nba_predictor/ingest/: backfill.py  daily.py  nba_client.py  players.py  team_stats.py
src/nba_predictor/model/: calibration.py  evaluate.py  predict.py  train.py
src/nba_predictor/pipelines/: run_daily.py  run_retrain.py
tests/: conftest.py  test_features.py  test_ingest.py  test_model.py
