[project]
name = "nba-predictor"
version = "0.1.0"
description = "Automated ML pipeline predicting NBA players' next-game points, built on Supabase + XGBoost + Streamlit."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nba-api>=1.11.4",
    "optuna>=4.8.0",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.56.0",
    "xgboost>=3.2.0",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
